--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(images/WhatsApp\ Image\ 2025-01-20\ at\ 00.14.59_61c1fbc4.jpg) no-repeat;
+    background: url(images/WhatsApp\ Image\ 2025-01-20\ at\ 00.37.31_001feb27.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
